--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "core/deps"]
 	path = core/deps
 	url = git@github.com:lyntel/tangram-es-deps.git
+[submodule "external/glfw"]
+	path = platforms/common/glfw
+	url = https://github.com/glfw/glfw
+[submodule "external/benchmark"]
+	path = bench/benchmark
+	url = https://github.com/google/benchmark
