--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m
-nextzenApiKey=pjjj_tOhSvytmDZYd8QK7w
+#nextzenApiKey=pjjj_tOhSvytmDZYd8QK7w
+nextzenApiKey=zPibckDAQ3mdOxqcarr3Qw
